--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,9 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.AboutUs">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/green"
+            android:theme="@style/Theme.AAS.AppBarOverlay">
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/Theme.AAS.PopupOverlay" >
+                <androidx.coordinatorlayout.widget.CoordinatorLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:id="@+id/backk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                        android:src="@drawable/arrow_back"
+                        android:layout_marginLeft="15dp"/>
+                    <TextView
+                        android:id="@+id/backkk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Back"
+                        android:layout_marginLeft="35dp"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:gravity="center_vertical"/>
+                </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.AppBarLayout>
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="55dp">
+        <TextView
+            android:id="@+id/a"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="About Us"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="40dp"/>
+
+
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/logo"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/aboutmessage"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_below="@+id/a"
+            android:layout_marginTop="70dp"
+            android:textSize="20dp"/>
+    <TextView
+        android:id="@+id/certificate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Certificates"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/aboutmessage"
+        android:textSize="25dp"
+        android:textStyle="bold"/>
+
+        <ImageView
+            android:id="@+id/cer1"
+            android:layout_width="wrap_content"
+            android:layout_height="240dp"
+            android:src="@drawable/cer"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="25dp"
+            android:layout_below="@+id/certificate"/>
+    <ImageView
+        android:id="@+id/cer2"
+        android:layout_width="wrap_content"
+        android:layout_height="240dp"
+        android:src="@drawable/cert"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_below="@+id/cer1"/>
+    <ImageView
+        android:id="@+id/cer3"
+        android:layout_width="wrap_content"
+        android:layout_height="240dp"
+        android:src="@drawable/certi"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_below="@+id/cer2"/>
+
+</RelativeLayout>
+
+
+    </RelativeLayout>
+
+</ScrollView>
