--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/logo"
         android:layout_width="225dp"
         android:layout_height="215dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/aasa"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"/>
 
