--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -41,7 +41,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginTop="6dp"/>
     <EditText
-        android:id="@+id/a1"
+        android:id="@+id/password2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint=" Re-enter Password"
@@ -54,21 +54,23 @@
         android:id="@+id/ab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/a1"
+        android:layout_below="@+id/password2"
         android:layout_marginTop="6dp"
         android:gravity="center_horizontal">
 
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"/>
+
         <TextView
             android:id="@+id/aa"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:text=" Agree to the privacy policy and the terms of service"/>
-
+            android:text=" By registering you agree to the "/>
+        <TextView
+            android:id="@+id/terms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Terms of Service"
+            android:textColor="#57c49b"/>
     </LinearLayout>
 
     <LinearLayout
@@ -79,9 +81,10 @@
         android:gravity="center_horizontal">
 
         <Button
-            android:id="@+id/login"
+            android:id="@+id/register_user"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
             android:background="@drawable/round_button"
             android:text="Register"
             />
