--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,13 +42,19 @@
         android:text="Featured Ads"
         android:textSize="19sp"
         android:textStyle="bold"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="260dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ad_recycler_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        android:layout_marginHorizontal="4dp"
         android:layout_marginTop="300dp"
+        android:layout_marginBottom="68dp"
         />
 
 
