--- a/app/src/main/res/layout/row_ad.xml
+++ b/app/src/main/res/layout/row_ad.xml
@@ -6,8 +6,9 @@
     android:layout_width="180dp"
     android:layout_height="240dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="4dp"
-    android:layout_gravity="center_horizontal" >
+    android:layout_marginVertical="6dp"
+    android:layout_marginHorizontal="8dp"
+    android:elevation="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
