--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -10,7 +10,7 @@
         android:id="@+id/z"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Information"
+        android:text="Contact Us"
         android:textSize="30dp"
         android:textStyle="bold"
         android:gravity="center"
@@ -21,26 +21,9 @@
         android:id="@+id/c"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/z">
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:src="@drawable/loc" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_5_26_dantlapalli_talamarala_kothacheruvu_ananthapur_andhra_pradesh_515133_india"
-            android:textColor="@color/black"
-            android:textSize="17dp"
-            android:layout_marginLeft="15dp"
-            android:padding="10dp"/>
-
-    </LinearLayout>
+        android:orientation="vertical"
+        android:layout_marginTop="1dp"
+        android:layout_below="@+id/z"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,69 +37,98 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:src="@drawable/phone_24"/>
+            android:layout_marginTop="1dp"
+            android:src="@drawable/phone_24" />
+
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="242dp"
             android:layout_height="wrap_content"
-            android:text="+91 9704218219 (click on the phone to call)"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
-            android:textSize="17dp"
-            android:textColor="@color/black"/>
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="1dp"
+            android:text="+91 9704218219
+                                             (click on the phone to call)"
+            android:textColor="@color/black"
+            android:textSize="17dp" />
+        <ImageView
+            android:id="@+id/copyone"
+            android:layout_width="89dp"
+            android:layout_height="29dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/copyicon" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:id="@+id/v"
-        android:layout_below="@id/x">
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_below="@id/x"
+        android:layout_marginTop="30dp">
+
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_baseline_email_24"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:src="@drawable/gmailicon" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" ananthagriservices@gmail.com"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
-            android:textSize="17dp"
-            android:textColor="@color/black"/>
+            android:text=" ananthagriservices@gmail.com"
+            android:textColor="@color/black"
+            android:textSize="17dp" />
+
+        <ImageView
+            android:id="@+id/copytwo"
+            android:layout_width="89dp"
+            android:layout_height="29dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/copyicon" />
+
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="79dp"
         android:layout_below="@id/v"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="24dp">
+
         <ImageView
             android:id="@+id/chatwhat"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/chat_24"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+91 6302086144"
             android:layout_marginTop="15dp"
-            android:layout_marginLeft="65dp"
-            android:textSize="17dp"
-            android:textColor="@color/black"/>
+            android:src="@drawable/chatwhat" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="bottom"
-            android:layout_marginTop="40dp"
             android:layout_marginLeft="65dp"
-            android:textSize="17dp"
+            android:layout_marginTop="15dp"
+            android:text="+91 6302086144"
             android:textColor="@color/black"
-            android:text="(Click on the icon to chat with us on whatsapp)"/>
+            android:textSize="17dp" />
+
+        <TextView
+            android:layout_width="273dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="65dp"
+            android:layout_marginTop="40dp"
+            android:gravity="bottom"
+            android:text="(Click on the icon to chat with us on whatsapp)"
+            android:textColor="@color/black"
+            android:textSize="17dp" />
+
     </RelativeLayout>
 
 
