Added minor changes

--- a/app/src/main/res/layout/row_ad.xml
+++ b/app/src/main/res/layout/row_ad.xml
@@ -11,6 +11,7 @@
     android:elevation="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/row_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
