--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
     <EditText
+        android:id="@+id/searchbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Search for Tractors, Fertilizers,etc"
@@ -27,11 +27,36 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/search_24" />
 
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="54dp">
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="60dp"
+            android:backgroundTint="@color/white"
+            android:src="@drawable/tractt" />
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="60dp"
+            android:backgroundTint="@color/white"
+            android:src="@drawable/plann" />
+    </RelativeLayout>
+
+
     <com.denzcoskun.imageslider.ImageSlider
         android:id="@+id/flipper"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="120dp"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="150dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         app:iss_auto_cycle="true"
         app:iss_period="1000"
         app:iss_delay="0"/>
@@ -43,7 +68,7 @@
         android:textSize="19sp"
         android:textStyle="bold"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="260dp"/>
+        android:layout_marginTop="280dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ad_recycler_view"
@@ -53,9 +78,17 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         android:layout_marginHorizontal="4dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="310dp"
         android:layout_marginBottom="68dp"
         />
+
+    <ImageButton
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/fert"
+        app:layout_anchor="@+id/relativeLayout"
+        android:backgroundTint="@color/white"
+        app:layout_anchorGravity="center" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
