--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,21 +11,21 @@
     tools:context=".ui.home.HomeFragment">
 
     <EditText
-        android:id="@+id/searchbar"
+        android:id="@+id/phoneNumber"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Search for Tractors, Fertilizers,etc"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="50dp"/>
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="right"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/search_24" />
+        android:layout_height="40dp"
+        android:hint="Search"
+        android:textSize="21dp"
+        android:gravity="center_vertical"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/custom_edit_text"
+        android:textColorHint="@android:color/darker_gray"
+        android:ems="10"
+        android:layout_marginTop="5dp"
+        android:drawableStart="@drawable/search_24"
+        android:drawablePadding="15dp"
+        />
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
