--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -47,6 +47,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="55dp">
+
+    <TextView
+        android:id="@+id/port"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Our Portfolio"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="20dp"/>
+    <ImageView
+        android:id="@+id/folio"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/briefcase"
+        android:layout_marginLeft="210dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"/>
         <TextView
             android:id="@+id/a"
             android:layout_width="wrap_content"
@@ -55,7 +73,7 @@
             android:textSize="25dp"
             android:textStyle="bold"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="40dp"/>
+            android:layout_marginTop="100dp"/>
 
 
         <ImageView
@@ -63,7 +81,7 @@
             android:layout_height="90dp"
             android:src="@drawable/logo"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="80dp"
             android:layout_marginRight="20dp"/>
 
         <TextView
