--- a/app/src/main/res/layout/activity_phone_number.xml
+++ b/app/src/main/res/layout/activity_phone_number.xml
@@ -24,6 +24,7 @@
         android:layout_height="50dp"
         android:hint="Mobile Number"
         android:textSize="21dp"
+        android:inputType="number"
         android:gravity="center_vertical"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp"
