--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,38 +5,37 @@
 
     <group android:checkableBehavior="single">
 
-        <item
-            android:id="@+id/explore"
-            android:icon="@drawable/order"
-            android:title="My Ads" />
+
         <item
             android:id="@+id/contact"
             android:icon="@drawable/contact_phone_24"
             android:title="Contact us" />
         <item
-            android:id="@+id/internshipform"
-            android:icon="@drawable/clipboard"
-            android:title="Internship form" />
-        <item
             android:id="@+id/blogs"
             android:icon="@drawable/blog"
             android:title="Our blogs" />
         <item
-            android:id="@+id/about_usMessage"
-            android:icon="@drawable/aboutus"
-            android:title="About us" />
-        <item
-            android:id="@+id/feedback"
-            android:icon="@drawable/feedback"
-            android:title="Feedback" />
+            android:id="@+id/privacy"
+            android:icon="@drawable/privacypolicy"
+            android:title="Privacy Policy" />
         <item
             android:id="@+id/settings"
             android:icon="@drawable/setting"
             android:title="Settings" />
         <item
-            android:id="@+id/privacy"
-            android:icon="@drawable/privacypolicy"
-            android:title="Privacy Policy" />
+            android:id="@+id/Education"
+            android:icon="@drawable/edu"
+            android:title="Education" />
+        <item
+            android:id="@+id/internshipform"
+            android:icon="@drawable/clipboard"
+            android:title="Internship form" />
+
+        <item
+            android:id="@+id/about_usMessage"
+            android:icon="@drawable/aboutus"
+            android:title="About us" />
+
         <item
             android:id="@+id/logout"
             android:icon="@drawable/logout"
