--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -7,18 +7,19 @@
         android:title="Home" />
     <item
         android:id="@+id/orders"
-        android:icon="@drawable/orderr"
+        android:icon="@drawable/order"
         android:title="My ads" />
     <item
         android:id="@+id/anchor"
         android:title="" />
+
+    <item
+        android:id="@+id/savedAds"
+        android:icon="@drawable/saved"
+        android:title="Saved Ads" />
     <item
         android:id="@+id/edit_profilebo"
         android:icon="@drawable/ic_baseline_person_24"
         android:title="Profile" />
-    <item
-        android:id="@+id/popUp"
-        android:icon="@drawable/vert_24"
-        android:title="Menu" />
 
 </menu>
