--- a/app/src/main/res/layout/activity_ad_detail.xml
+++ b/app/src/main/res/layout/activity_ad_detail.xml
@@ -163,32 +163,50 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_ad_detail_product_description" />
 
             <RatingBar
+                android:id="@+id/ad_rating_bar"
                 style="@style/Widget.AppCompat.RatingBar.Indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
+                android:isIndicator="true"
                 android:numStars="5"
-                android:scaleY="0.8"
                 android:scaleX="0.8"
-                android:isIndicator="false"
+                android:scaleY="0.8"
                 app:layout_constraintBottom_toBottomOf="@+id/review_text"
-                app:layout_constraintEnd_toEndOf="@+id/tv_ad_detail_product_description"
+                app:layout_constraintEnd_toStartOf="@+id/imageButton_more_reviews"
                 app:layout_constraintTop_toTopOf="@+id/review_text" />
 
+            <ImageButton
+                android:id="@+id/imageButton_more_reviews"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_baseline_keyboard_arrow_right_24"
+                android:backgroundTint="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/ad_rating_bar"
+                app:layout_constraintEnd_toEndOf="@+id/tv_ad_detail_product_description"
+                app:layout_constraintTop_toTopOf="@+id/ad_rating_bar" />
 
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="28dp"
+                android:background="@drawable/ic_line"
+                app:layout_constraintBottom_toTopOf="@+id/tv_ad_detail_posted_by"
+                app:layout_constraintTop_toBottomOf="@+id/review_text"
+                tools:layout_editor_absoluteX="28dp" />
 
 
             <TextView
                 android:id="@+id/tv_ad_detail_posted_by"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Posted By"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="@+id/tv_ad_detail_product_description"
-                app:layout_constraintTop_toBottomOf="@+id/review_text"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/review_text" />
 
             <ImageView
                 android:id="@+id/ad_detail_seller_dp"
@@ -227,17 +245,20 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_make_offer"
-                android:layout_width="wrap_content"
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_width="147dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/ic_btn_ad_detail"
-                android:drawablePadding="4dp"
+                android:drawableStart="@drawable/ic_handshake"
+                android:drawablePadding="2dp"
                 android:drawableTint="@color/white"
                 android:fontFamily="@font/poppins_medium"
+                android:gravity="center"
                 android:text="Make Offer"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/btn_call_seller"
@@ -245,17 +266,22 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_call_seller"
+                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:background="@drawable/ic_btn_ad_detail"
-                android:drawablePadding="4dp"
+                android:background="@drawable/ic_ad_btn_shape"
+                android:drawableStart="@drawable/ic_make_call"
+                android:drawablePadding="8dp"
                 android:drawableTint="@color/white"
                 android:fontFamily="@font/poppins_medium"
+                android:gravity="center"
+                android:paddingStart="40dp"
+                android:paddingEnd="40dp"
                 android:text="Call"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/btn_make_offer"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
