--- a/app/src/main/res/layout/activity_add_ads.xml
+++ b/app/src/main/res/layout/activity_add_ads.xml
@@ -236,7 +236,7 @@
 
                 <Spinner
                     android:id="@+id/spinner_price_unit"
-                    android:layout_width="107dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="28dp"
                     android:layout_marginTop="8dp"
